class loader exception has been resolved